[package]
name = "mosm-rs"
version = "0.1.0"
edition = "2024"
description = "A Simple Weather Cli"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ferozeren/mosm-rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

reqwest = { version = "0.12", default-features = false, features = [
  "blocking",
  "rustls-tls",
] }
dotenv = "0.15.0"

[profile.release]
opt-level = "s"
lto = true
debug = false
codegen-units = 1
strip = true
panic = "abort"
incremental = false

[profile.dev]
incremental = true

[dev-dependencies]
